--- a/index.html
+++ b/index.html
@@ -1,59 +1,64 @@
----
-layout: default
+--- 
+layout: default 
 ---
 
 <ul class="ned-list">
-{% for category in site.data.songs %}
-    {% for artist in category[1] %}
-        {% assign curartist = artist[1] %}
+    {% for category in site.data.songs %} {% for artist in category[1] %} {% assign curartist = artist[1] %} {% for song in curartist.songs
+    %}
+    <li class="ned-song">
+        <h3>{{ song.title }} -
+            <a href="#artist={{ artist[0] }}">{{ curartist.artist }}</a>
+        </h3>
 
-        {% for song in curartist.songs %}
-            <li>
-                <h3>{{ song.title }} - <a href="#artist={{ artist[0] }}">{{ curartist.artist }}</a></h3>
-
-                <!-- Play -->
-                <b>Play:</b>
-                {% for youtube in song.youtube %}
-                <button onclick="loadVideo('{{ youtube }}');">YouTube</button>
-                {% endfor %}
-
-                <!-- Meta -->
-                <b>Meta:</b>
-                <ul class="ned-list ned-list--inline">
-                    <li><a href="#/year/{{ song.year }}/">{{ song.year }}</a></li>
-                </ul>
-
-                <!-- External links -->
-                <b>Links:</b>
-                <ul class="ned-list ned-list--inline">
-                    <li><a href="http://www.deezer.com/track/{{ song.deezer }}" target="_blank">Deezer</a></li>
-                    <li><a href="https://www.shazam.com/track/{{ song.shazam }}" target="_blank">Shazam</a></li>
-                    {% if song.wikipedia %}
-                    <li><a href="{{ song.wikipedia }}" target="_blank">Wikipedia</a></li>
-                    {% endif %}
-                    {% for youtube in song.youtube %}
-                    <li><a href="https://www.youtube.com/watch?v={{ youtube }}" target="_blank">YouTube</a></li>
-                    {% endfor %}
-                </ul>
-
-                <!-- Tags -->
-                <b>Tags:</b>
-                <ul class="ned-list ned-list--inline">
-                    {% for tag in song.tags %}
-                    <li><a href="#{{ tag }}">{{ tag }}</a></li>
-                    {% endfor %}
-                </ul>
-
-                <hr>
-            </li>
+        <!-- Play -->
+        {% for youtube in song.youtube %}
+        <!-- <button onclick="loadVideo('{{ youtube }}');">YouTube</button> -->
+        <button class="ned-button--youtube" onclick="loadVideo('{{ youtube }}');"></button>
         {% endfor %}
 
-    {% endfor %}
-{% endfor %}
+        <!-- Meta -->
+        <span class="ned-date">
+            <a href="#/year/{{ song.year }}/"><time>{{ song.year }}</time></a>
+        </span>
+        <!-- <ul class="ned-list ned-list--inline">
+            <li>
+                <a href="#/year/{{ song.year }}/">{{ song.year }}</a>
+            </li>
+        </ul> -->
+
+        <!-- External links -->
+        <ul class="ned-list ned-list--inline ned-list--links">
+            <li><a class="ned-link--tir ned-link--deezer" href="http://www.deezer.com/track/{{ song.deezer }}" target="_blank">Deezer</a></li>
+            <li><a class="ned-link--tir ned-link--shazam" href="https://www.shazam.com/track/{{ song.shazam }}" target="_blank">Shazam</a></li>
+            {% if song.wikipedia %}
+            <li><a class="ned-link--tir ned-link--wikipedia" href="{{ song.wikipedia }}" target="_blank">Wikipedia</a></li>
+            {% endif %} {% for youtube in song.youtube %}
+            <li><a class="ned-link--tir ned-link--youtube" href="https://www.youtube.com/watch?v={{ youtube }}" target="_blank">YouTube</a></li>
+<!-- 
+            <li>
+                <a href="https://www.youtube.com/watch?v={{ youtube }}" target="_blank">YouTube</a>
+            </li> -->
+            {% endfor %}
+        </ul>
+
+        <!-- Tags -->
+        <b>Tags:</b>
+        <ul class="ned-list ned-list--inline">
+            {% for tag in song.tags %}
+            <li>
+                <a href="#{{ tag }}">{{ tag }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+
+    </li>
+    {% endfor %} {% endfor %} {% endfor %}
 </ul>
 
 <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-<div id="player"></div>
+<div class="player-wrapper">
+    <div id="player"></div>
+</div>
 
 <script>
     // 2. This code loads the IFrame Player API code asynchronously.
@@ -67,22 +72,30 @@ layout: default
     //    after the API code downloads.
     var player;
     function onYouTubeIframeAPIReady() {
-    player = new YT.Player('player', {
-        height: '195',
-        width: '320',
-        // videoId: 'M7lc1UVf-VE',
-        events: {
-        'onReady': onPlayerReady
-        }
-    });
+        player = new YT.Player('player', {
+            height: '200',
+            width: '200',
+            playerVars: {
+                // controls: 0,
+                iv_load_policy: 3,
+                // modestbranding: 1,
+                rel: 0,
+                showinfo: 0,
+                theme: "light"
+            },
+            // videoId: 'M7lc1UVf-VE',
+            events: {
+                'onReady': onPlayerReady
+            }
+        });
     }
 
     // 4. The API will call this function when the video player is ready.
     function onPlayerReady(event) {
-        event.target.playVideo();
+        // event.target.playVideo();
     }
 
     function loadVideo(videoID) {
-        if(player) { player.loadVideoById(videoID); }
+        if (player) { player.loadVideoById(videoID); }
     }
 </script>
